[gd_scene load_steps=3 format=3 uid="uid://cq3ywl47smd31"]

[ext_resource type="Script" path="res://scripts/temp_menu.gd" id="1_tqhmv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcwi3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="TempMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tqhmv")

[node name="Platformer" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 42.0
offset_right = 200.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwi3")
text = "Platformer"

[node name="Shooter" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 155.0
offset_right = 200.0
offset_bottom = 241.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwi3")
text = "Shooter"

[node name="Car" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 270.0
offset_right = 200.0
offset_bottom = 356.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwi3")
text = "Car"

[node name="Ship" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 388.0
offset_right = 200.0
offset_bottom = 474.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwi3")
text = "Ship"

[node name="Lobby" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_top = 507.0
offset_right = 199.0
offset_bottom = 593.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_fcwi3")
text = "Lobby"

[connection signal="pressed" from="Platformer" to="." method="_on_platformer_pressed"]
[connection signal="pressed" from="Shooter" to="." method="_on_shooter_pressed"]
[connection signal="pressed" from="Car" to="." method="_on_car_pressed"]
[connection signal="pressed" from="Ship" to="." method="_on_ship_pressed"]
[connection signal="pressed" from="Lobby" to="." method="_on_lobby_pressed"]
